--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: blue">
+    <h1 >
         hello world
     </h1>
+    <h2>
+        welcome web
+    </h2>
 </body>
 </html>
