--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="color:blue;" >
         hello world
     </h1>
-    <h2>
+    <h2  style="color:blue;">
         welcome web
     </h2>
 </body>
